--- a/Views/Shared/_footer3.cshtml
+++ b/Views/Shared/_footer3.cshtml
@@ -51,7 +51,7 @@
                     <ul>
 
 
-                        <li><a href="www.facebook.com/jjkhan.photography/" target="_blank"><img src="~/Content/images/facebook.png" alt="Facebook"></a></li>
+                        <li><a href="https://www.facebook.com/jjkhan.photography/" target="_blank"><img src="~/Content/images/facebook.png" alt="Facebook"></a></li>
 
                         <li><a href="https://www.instagram.com/junaidjavedkhan/" target="_blank"><img src="~/Content/images/instaa.png" width="24" height="24" alt="Instagram"></a></li>
                         
